Adding an indication as to who you're logged in as to the profiles screen

--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -185,6 +185,7 @@
 		<div class="profiles__recordings">
 			<div class="flex-align-right">
 				<button class="button button-calm logout" ng-click="logOut()" ng-disabled="isEditing">Log out</button>
+				<p class="display-name"> {{ displayName }} </p>
 			</div>
 			<h2>
 				Recordings
