--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -172,7 +172,7 @@
 								<button
 									type="button"
 									class="button button-royal column-div"
-									ng-click="optInFormalTesting"
+									ng-click="optInFormalTesting()"
 									ng-hide="isEditing || !data.currentProfile"
 									ng-disabled="!data.currentProfile">
 									Formal Testing
