css fix for longer carrier phrases

--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -22,7 +22,7 @@
     <p
       ng-hide="!isPracticing"
       class="words-progress-indicator">
-      --- {{currentWordIdx + 1}} of {{count}}
+      {{currentWordIdx + 1}}/{{count}}
     </p>
   </div>
   <div class="debug"
