--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -1,5 +1,4 @@
 <div class="words-contentBox" >
-
   <button
     style="margin:40px;"
     ng-click="beginWordPractice()"
@@ -25,14 +24,16 @@
       {{currentWordIdx + 1}}/{{count}}
     </p>
   </div>
-  <div class="debug"
-       style="display: none">
-    Trial number: {{currentWordIdx + 1}}<br />
-    Block score: {{block_score}}<br />
-    Weighted Average: {{block_score / 10}}<br />
-    Difficulty Level: {{difficulty}}<br />
-    Carrier phrase: {{carrier_phrase}}<br />
-    {{csvs}}
+  <div class="debug">
+    <div ng-if="coins_consecutive_gold > coins_consecutive_gold_breakpoints[0]">
+      Congratulations! <strong>{{coins_consecutive_gold_display}}</strong> golds in a row!
+    </div>
+    highscore: {{block_coins_highscore}} gold, {{block_score_highscore}} points <br />
+    coins session summary: {{session_coins}}<br />
+    coins by block:
+    <div ng-repeat="block in block_coins">
+      {{block}}
+    </div>
   </div>
   <lpc-directive
     probe="probe"
@@ -45,5 +46,4 @@
     wave-hidden="forceWaveHidden || isFeedbacking"
     hide-btn="true"
     />
-
 </div> <!-- end words-contentBox-->
