--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -28,7 +28,8 @@
     <div ng-if="coins_consecutive_gold > coins_consecutive_gold_breakpoints[0]">
       Congratulations! <strong>{{coins_consecutive_gold_display}}</strong> golds in a row!
     </div>
-    highscore: {{block_coins_highscore}} gold, {{block_score_highscore}} points <br />
+    highscore block: {{block_golds_highscore}} gold, {{block_score_highscore}} points <br />
+    highscore session: {{session_coins.gold}} gold, {{session_score}} points<br />
     coins session summary: {{session_coins}}<br />
     coins by block:
     <div ng-repeat="block in block_coins">
