state save. cleanup started, but too sleepy to keep going

--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -1,4 +1,5 @@
-<div id="statusBar-bg"></div>
+<!-- <div id="statusBar-bg"></div> -->
+
 <ion-view view-title="staRt" id="nav-and-content-container">
 
   <!-- Title Bar -->
