--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -3,7 +3,7 @@
 <ion-view view-title="staRt" id="nav-and-content-container">
 
   <!-- Title Bar -->
-  <ion-nav-bar></ion-nav-bar>
+  <ion-nav-bar class="root-ion-nav-bar"></ion-nav-bar>
 
   <!-- Content -->
   <ion-nav-view name="content-view" id="content-container">
