minor styles cleanup. Tried adjusting Tutorial to match the global-styles-cleanup pattern in all other states, but ultimately reset all Tutorial changes and left them As Is.

--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -10,8 +10,8 @@
 		<div class="resources-layout">
 
 			<div class="version-display">
-					<p>staRt app version {{data.version}}</p>
-					<p>{{data.platform}}</p>
+					<!-- <p>staRt app version {{data.version}}</p>
+					<p>{{data.platform}}</p> -->
 			</div>
 
 			<div class="resources-links-container resources" ng-if="!data.configuring">
