--- a/staRt/www/states/root/tutorial/tutorial_template.html
+++ b/staRt/www/states/root/tutorial/tutorial_template.html
@@ -1,6 +1,8 @@
 <ion-view
 	view-title="Tutorial"
-	class="state-contentBox--wide">
+	class="state-contentBox">
+
+	<ion-nav-bar class="tut-ion-nav-bar"></ion-nav-bar>
 
 	<div class="tut-contentBox">
 
