See #243. Ready for review. this commit adds new styles to Resources as an example.

--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -4,7 +4,7 @@
 		<ion-nav-bar class="free-ion-nav-bar"></ion-nav-bar>
 
 		<!-- full-width eles go here -->
-		<div class="free-bg img-bg img-bg_qtNoBF"></div>
+		<div class="free-bg"></div>
 
 		<!-- content goes here -->
 		<div class="free-layout">
