See #243. Sets root template ion-nav-bar to hide-nav-bar="true".

--- a/staRt/www/states/root/root_template.html
+++ b/staRt/www/states/root/root_template.html
@@ -1,9 +1,7 @@
-<!-- <div id="statusBar-bg"></div> -->
-
 <ion-view view-title="staRt" id="nav-and-content-container">
 
   <!-- Title Bar -->
-  <ion-nav-bar class="root-ion-nav-bar"></ion-nav-bar>
+  <ion-nav-bar hide-nav-bar="true" class="root-ion-nav-bar"></ion-nav-bar>
 
   <!-- Content -->
   <ion-nav-view name="content-view" id="content-container">
