--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -3,7 +3,7 @@
 	<div class="resources-contentBox">
 
 		<!-- ion-nav-bar -->
-		<ion-nav-bar ng-if="!data.configuring" class="resources-ion-nav-bar">
+		<ion-nav-bar ng-if="!data.configuring" class="resources-ion-nav-bar"> 
 			<ion-nav-title>{{data.navTitle}}</ion-nav-title>
 		</ion-nav-bar>
 
@@ -12,7 +12,7 @@
 		</ion-nav-bar>
 
 
-		<!-- abs pos & full-width eles go here -->
+		<!-- full-width & abs pos eles go here -->
 		<div ng-if="!data.configuring" class="resources-bg img-bg img-bg_res"></div>
 		<div ng-if="data.configuring" class="resources-bg"></div>
 
