See 239 -- wip but at least hte LPC has a transparent background now

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,5 +1,5 @@
 <!-- .lpc-container is the light blue containing box-->
-<div ng-class="{'lpc-container': !tutorial, 'lpc-container-tutorial': tutorial}">
+<div ng-class="{'lpc-container': !tutorial, 'lpc-container-tutorial': tutorial, 'transparent-background': transparent}">
 
 	<!-- this holds the lpc renderer -->
 	<div
