--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -26,7 +26,8 @@
 	</p>
 	</div>
 
-	<lpc-directive
+  <lpc-directive
+    transparent="true"
 		probe="probe"
 		slider="true"
 		rate="isPracticing"
