--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -1,14 +1,14 @@
 <ion-view view-title="Profiles" class="state-contentBox" hide-nav-bar="false">
 
-	<div class="profiles-contentBox">
-		<ion-nav-bar class="profiles-ion-nav-bar"></ion-nav-bar>
+	<div class="profiles-layout_view-container">
+		<ion-nav-bar class="ion-nav-bar--old"></ion-nav-bar>
 
-		<div class="profiles-bg">
+		<div class="profiles-layout_bg-container">
 			<!-- full-width eles go here -->
 		</div>
 
 		<!-- content goes here -->
-		<ion-pane class="profiles-layout">
+		<ion-pane class="profiles-layout_content-container">
 
 			<div class="profiles__list">
 				<ion-list class="list">
