--- a/staRt/www/states/root/tutorial/tutorial_template.html
+++ b/staRt/www/states/root/tutorial/tutorial_template.html
@@ -2,9 +2,9 @@
 	view-title="Tutorial"
 	class="state-contentBox">
 
-	<ion-nav-bar class="tut-ion-nav-bar"></ion-nav-bar>
+	<ion-nav-bar class="ion-nav-bar--old"></ion-nav-bar>
 
-	<div class="tut-contentBox">
+	<div class="tutorial-layout_view-container">
 
 	<!-- ==================================
 	SAND BAR
