--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -1,13 +1,16 @@
 <ion-view view-title="Free Play" class="state-contentBox">
 
-	<div class="free-contentBox">
-		<ion-nav-bar class="free-ion-nav-bar"></ion-nav-bar>
+	<div class="free-layout_view-container">
+		<ion-nav-bar class="ion-nav-bar--old"></ion-nav-bar>
 
-		<!-- full-width eles go here -->
-		<div class="free-bg"></div>
+
+		<div class="free-layout_bg-container">
+			<!-- full-width eles go here -->
+		</div>
+
 
 		<!-- content goes here -->
-		<div class="free-layout">
+		<div class="free-layout_content-container">
 
 			<!-- <div class="text-and-lpc__text"> -->
 			<div class="free-header">
