--- a/staRt/www/states/root/words/words_template.html
+++ b/staRt/www/states/root/words/words_template.html
@@ -1,19 +1,24 @@
 <ion-view view-title="Quest" class="state-contentBox">
 
-	<div class="quest-contentBox">
-		<ion-nav-bar class="quest-ion-nav-bar">
+	<div class="quest-layout_view-container">
+
+		<ion-nav-bar class="{{ (practicing) ? 'ion-nav-bar' : 'ion-nav-bar--old' }}">
 			<ion-nav-title>{{data.navTitle}}</ion-nav-title>
 		</ion-nav-bar>
 
-		<div class="quest-bg">
-      <!-- full-width eles go here -->
+		<!-- full-width & abs pos eles go here -->
+		<div class="quest-layout_bg-container">
       <div ng-if="practicing && !data.waveHidden" class="img-bg img-bg_qtBF--BG"></div>
       <div ng-if="practicing && !data.waveHidden" class="img-bg img-bg_qtBF--MG"></div>
       <div ng-if="practicing && !data.waveHidden" class="img-bg img-bg_qtBF--FG"></div>
       <div ng-if="practicing && data.waveHidden" class="img-bg img-bg_qtNoBF"></div>
 		</div>
 
-		<div class="quest-layout">
+
+		<!-- ===================================== -->
+		<!-- flexbox page content goes here -->
+		<div class="quest-layout_content-container">
+
 			<div class="quest-header" ng-hide="practicing || configuring">
 				<h2 class="text-and-lpc__text">
 					What would you like to practice?
