implements svg bg images for Free. Uncomment when ready to update this section.

--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -3,9 +3,14 @@
 	<div class="free-layout_view-container">
 		<ion-nav-bar class="ion-nav-bar--old"></ion-nav-bar>
 
-
+		<!-- full-width eles go here -->
 		<div class="free-layout_bg-container">
-			<!-- full-width eles go here -->
+		<!--  for update, when ready -->
+			<!--
+			<div class="img-bg img-bg_qtBF--BG"></div>
+			<div class="img-bg img-bg_qtBF--MG"></div>
+			<div class="img-bg img-bg_qtBF--FG"></div>
+			-->
 		</div>
 
 
