--- a/staRt/www/states/root/auto/auto_template.html
+++ b/staRt/www/states/root/auto/auto_template.html
@@ -5,9 +5,10 @@
 			<ion-nav-title>{{data.navTitle}}</ion-nav-title>
 		</ion-nav-bar>
 
-		<!-- full-width & abs pos eles go in here -->
+		<!-- full-screen & abs pos eles go in here -->
 		<div class="auto-layout_bg-container">
 			<div ng-if="practicing" class="img-bg img-bg_qz--BG"></div>
+
 			<div ng-if="practicing" class="img-bg img-bg_qz--FG"></div>
 		</div>
 
@@ -16,7 +17,7 @@
 		<!-- flexbox page content goes here -->
 		<div class="auto-layout_content-container">
 
-			<div class="probe-header" ng-hide="practicing">
+			<div class="quiz-menu-row quiz-header-row" ng-hide="practicing">
 				<h2 class="text-and-lpc__text">
 					What would you like to test?
 				</h2>
@@ -25,53 +26,49 @@
 				<p> You can compare your scores before and after a period of practice. </p>
 			</div>
 
-			<div class="probe-description-row" ng-hide="practicing">
-				<div class="probe-description">
+			<div class="quiz-menu-row quiz-description-row" ng-hide="practicing">
+
+				<div class="quiz-description">
 					<h3>Syllable Quiz</h3>
 					<p>
 						Imitate the clinician's model of syllables containing /r/
 						 (ten syllables, three times each).
 					</p>
+
+					<div class="btn-row">
+						<button
+							class="big-button"
+							ng-click="beginSyllableProbe()"
+							ng-hide="practicing"
+						>
+							Syllable Quiz
+						</button>
+					</div>
 				</div>
-				<div class="probe-description">
+
+				<div class="quiz-description">
 					<h3>Word Quiz</h3>
 					<p>
 						Read words containing /r/. The long quiz
 						 contains 50 words and the short quiz contains 25 words.
 					</p>
-				</div>
-			</div>
+					<div class="btn-row">
+						<button
+							class="big-button"
+							ng-click="beginWordProbe(50)"
+							ng-hide="practicing"
+						>
+							Long Word Quiz
+						</button>
 
-			<div class="probe-buttons" ng-hide="practicing">
-				<div class="probe-button-class">
-					<!-- 30 items, sequential -->
-					<button
-						class="big-button"
-						ng-click="beginSyllableProbe()"
-						ng-hide="practicing"
-					>
-						Syllable Quiz
-					</button>
-				</div>
-
-				<div class="probe-button-class">
-					<!-- 50 items, random -->
-					<button
-						class="big-button"
-						ng-click="beginWordProbe(50)"
-						ng-hide="practicing"
-					>
-						Long Word Quiz
-					</button>
-
-					<!-- 25 items, random -->
-					<button
-						class="big-button"
-						ng-click="beginWordProbe(25)"
-						ng-hide="practicing"
-					>
-						Short Word Quiz
-					</button>
+						<button
+							class="big-button"
+							ng-click="beginWordProbe(25)"
+							ng-hide="practicing"
+						>
+							Short Word Quiz
+						</button>
+					</div>
 				</div>
 			</div>
 
